# citrust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.squad/: decisions.md  routing.md  team.md
.squad/agents/fox/: charter.md  history.md
.squad/agents/link/: charter.md  code-analysis.md  history.md
.squad/agents/samus/: charter.md  history.md  port-plan.md
.squad/agents/scribe/: charter.md  history.md
.squad/agents/toad/: charter.md  history.md  test-analysis.md
.squad/casting/: history.json  policy.json  registry.json
.squad/decisions/inbox/: copilot-directive-2026-02-22T012848Z.md  fox-appimage-packaging.md  fox-gui-cleanup.md  fox-gui-framework.md  fox-gui-implementation.md  fox-key-persistence.md  link-content-detection.md  link-crypto-crate-selection.md  link-inazuma-investigation.md  link-keydb.md  link-reverse-detection.md  link-simd-results.md  link-strip-keys.md  link-workspace-conversion.md  samus-appimage-release.md  samus-ci-pipeline.md  samus-github-setup.md  samus-port-architecture.md  samus-release-v020.md  toad-integration-tests.md  toad-test-strategy.md  toad-unit-tests.md
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-02-22T014100Z-github-setup.md  2026-02-22T014204Z-session.md  2026-02-22T032211.md  2026-02-22T044254.md
.squad/orchestration-log/: 2026-02-22T014100Z-samus.md  2026-02-22T014200Z-toad.md  2026-02-22T014201Z-link.md  2026-02-22T014202Z-fox.md  2026-02-22T014203Z-samus.md  2026-02-22T032211-fox-gui-implementation.md  2026-02-22T032211-link-workspace-conversion.md  2026-02-22T032211-samus-distribution-strategy.md  2026-02-22T044254-fox-appimage-packaging.md  2026-02-22T044254-samus-appimage-release.md
b3DS-master/: b3DSDecrypt.py  b3DSEncrypt.py
benches/: RESULTS.md  compare.ps1  crypto_bench.rs
crates/citrust-cli/: Cargo.toml
crates/citrust-core/: Cargo.toml
crates/citrust-core/benches/: crypto_bench.rs
crates/citrust-core/src/: crypto.rs  decrypt.rs  keydb.rs  keys.rs  lib.rs  ncch.rs  ncsd.rs
crates/citrust-core/tests/: integration_tests.rs
crates/citrust-gui/: Cargo.toml
crates/citrust-gui/src/: main.rs
packaging/: README.md  build-appimage.sh  citrust-gui.desktop  io.github.londospark.citrust.metainfo.xml
src/: crypto.rs  decrypt.rs  gui.rs  keys.rs  main.rs  ncch.rs  ncsd.rs
tests/: integration_tests.rs
(+4 files in other folders)
