[package]
name = "citrust"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
ctr = "0.9"
cipher = "0.4"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
thiserror = "2"
indicatif = "0.17"
memmap2 = "0.9.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
sha2 = "0.10"

[[bench]]
name = "crypto_bench"
harness = false

[features]
default = []
gui = ["dep:eframe", "dep:rfd"]

[dependencies.eframe]
version = "0.29"
optional = true
default-features = false
features = ["default_fonts", "glow", "wayland", "x11"]

[dependencies.rfd]
version = "0.15"
optional = true
default-features = false
features = ["xdg-portal"]

[[bin]]
name = "citrust-gui"
path = "src/gui.rs"
required-features = ["gui"]
