[package]
name = "citrust-gui"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "citrust-gui"
path = "src/main.rs"

[dependencies]
citrust-core = { path = "../citrust-core" }

[dependencies.eframe]
version = "0.33"
default-features = false
features = ["default_fonts", "glow", "wayland", "x11"]

[dependencies.rfd]
version = "0.17"
features = ["xdg-portal"]
